--- a/web/sdk/admin/views/organizations/details/members/members.module.css
+++ b/web/sdk/admin/views/organizations/details/members/members.module.css
@@ -32,5 +32,5 @@
 }
 
 .table-action-column {
-    width: 32px;
+    width: var(--rs-space-12);
 }
