--- a/web/sdk/admin/views/plans/plans.module.css
+++ b/web/sdk/admin/views/plans/plans.module.css
@@ -14,6 +14,10 @@
     border-bottom: 1px solid var(--rs-color-border-base-primary);
 }
 
+.first-column {
+    padding-left: var(--rs-space-7);
+}
+
 .sheetContent {
     width: 400px;
     padding: 0;
