--- a/web/sdk/admin/views/roles/roles.module.css
+++ b/web/sdk/admin/views/roles/roles.module.css
@@ -15,6 +15,10 @@
     border-bottom: 1px solid var(--rs-color-border-base-primary);
 }
 
+.first-column {
+    padding-left: var(--rs-space-7);
+}
+
 .permissionsColumn {
     max-width: 500px;
     text-wrap: wrap;
